feat: add Queen's Chamber chat & Royal Decrees admin panel
- Added Node.js/Express backend with SQLite database
- Admin panel: send email invitations with unique codes
- Queen's Chamber: real-time chat room gated by invitation codes
- Socket.IO for live messaging and online user tracking
- Navigation bar linking Home, Royal Decrees, and Queen's Chamber
- Moved static files to public/ directory
- Removed old docs/ folder and duplicate root files
- Bridgerton aesthetic preserved across all pages

--- a/public/index.html
+++ b/public/index.html
@@ -22,10 +22,14 @@
     <!-- Floating particles canvas -->
     <canvas id="particles-canvas"></canvas>
 
-    <!-- Decorative top ornament -->
-    <div class="ornament-top" aria-hidden="true">
-        <span class="ornament-flourish">✦ ❦ ✦</span>
-    </div>
+    <!-- Navigation Bar -->
+    <nav class="nav-bar">
+        <a href="/" class="active">✦ Home</a>
+        <span class="nav-separator">|</span>
+        <a href="/admin.html">🔑 Royal Decrees</a>
+        <span class="nav-separator">|</span>
+        <a href="/chamber.html">👑 Queen's Chamber</a>
+    </nav>
 
     <!-- Hero Section -->
     <header class="hero" id="hero">
@@ -93,8 +97,9 @@
                 <span>⟡</span>
             </div>
             <p class="section-description">
-                The esteemed hostesses Ishmeen &amp; Khushi have opened the doors of Riverside Commons
-                for a most anticipated evening — and their dearest friends have been cordially invited.
+                The crown's finest have assembled at Riverside Commons for a most anticipated evening —
+                armed with the finest wine, the warmest tea, and gossip scandalous enough to make
+                Lady Whistledown blush.
             </p>
         </div>
 
@@ -112,9 +117,9 @@
                         <div class="crown-badge">♛</div>
                     </div>
                     <h3 class="friend-name">Ishmeen</h3>
-                    <p class="friend-title">Co-Hostess of Riverside Commons</p>
-                    <p class="friend-quote">"Riverside Commons shall host the most splendid watch party the ton has ever
-                        witnessed!"</p>
+                    <p class="friend-title">Princess Ishmeen of Hamilton Heights</p>
+                    <p class="friend-quote">"A princess does not simply watch Bridgerton — she critiques every gown,
+                        sips her tea with authority, and spills gossip between every scene."</p>
                     <div class="card-ornament">✦ ✦ ✦</div>
                 </div>
             </div>
@@ -132,15 +137,15 @@
                         <div class="crown-badge">♛</div>
                     </div>
                     <h3 class="friend-name">Khushi</h3>
-                    <p class="friend-title">Co-Hostess of Riverside Commons</p>
-                    <p class="friend-quote">"Snacks, blankets, and Benedict — Riverside Commons is ready for the ton!"
-                    </p>
+                    <p class="friend-title">Queen Khushi of Columbia</p>
+                    <p class="friend-quote">"A queen rules with wine in one hand and the remote in the other.
+                        The gossip shall flow as freely as the Pinot Noir."</p>
                     <div class="card-ornament">✦ ✦ ✦</div>
                 </div>
             </div>
 
             <!-- Vishal - Invited Guest -->
-            <div class="friend-card reveal-on-scroll" id="card-vishal">
+            <div class="friend-card host-card reveal-on-scroll" id="card-vishal">
                 <div class="card-glow"></div>
                 <div class="card-inner">
                     <div class="avatar-container">
@@ -149,17 +154,18 @@
                                 <span class="avatar-initial">V</span>
                             </div>
                         </div>
+                        <div class="crown-badge">♛</div>
                     </div>
                     <h3 class="friend-name">Vishal</h3>
-                    <p class="friend-title">The Distinguished Gentleman</p>
-                    <p class="friend-quote">"I have cleared my entire social calendar for this most important affair."
-                    </p>
+                    <p class="friend-title">Your Grace, Vishal · Duke of Morningside Heights</p>
+                    <p class="friend-quote">"A duke does not merely attend a watch party — he arrives with impeccable
+                        taste in wine and opinions no one asked for, yet everyone needs."</p>
                     <div class="card-ornament">✦ ✦ ✦</div>
                 </div>
             </div>
 
             <!-- Rishika - Invited Guest -->
-            <div class="friend-card reveal-on-scroll" id="card-rishika">
+            <div class="friend-card host-card reveal-on-scroll" id="card-rishika">
                 <div class="card-glow"></div>
                 <div class="card-inner">
                     <div class="avatar-container">
@@ -168,10 +174,12 @@
                                 <span class="avatar-initial">R</span>
                             </div>
                         </div>
+                        <div class="crown-badge">♛</div>
                     </div>
                     <h3 class="friend-name">Rishika</h3>
-                    <p class="friend-title">The Enchanting Duchess</p>
-                    <p class="friend-quote">"No spoilers, darling — or I shall write about you in my column!"</p>
+                    <p class="friend-title">Princess Rishika of Washington Heights</p>
+                    <p class="friend-quote">"I bring the tea — both the kind you sip and the kind you spill.
+                        Spoil a single scene and I shall exile you from the kingdom."</p>
                     <div class="card-ornament">✦ ✦ ✦</div>
                 </div>
             </div>
@@ -219,13 +227,16 @@
         <div class="whistledown-content reveal-on-scroll">
             <div class="quill-icon">✒</div>
             <blockquote class="whistledown-quote">
-                "Dear Reader, it has come to this author's attention that the most delightful gathering
-                is being arranged at <strong>Riverside Commons</strong>. The esteemed hostesses Ishmeen and Khushi
-                have cordially invited their dearest companions, Vishal and Rishika, for what promises to be
-                the event of the season — the viewing of
-                <strong>Bridgerton Season Four, Part Two</strong>. One can only imagine the gasps,
-                the tears, and the declarations of love that shall fill the room. This author shall
-                be watching... as always."
+                "Dear Reader, it has come to this author's attention that
+                <strong>Queen Khushi of Columbia</strong> and
+                <strong>Princess Ishmeen of Hamilton Heights</strong>
+                have conspired with <strong>His Grace, Vishal, the Duke of Morningside Heights</strong>
+                and <strong>Princess Rishika of Washington Heights</strong> for what promises to be
+                the event of the season at <strong>Riverside Commons</strong>. The wine shall be plentiful,
+                the tea piping hot, and the gossip — oh, the gossip — positively <em>ruinous</em>.
+                One does wonder who shall cry first during
+                <strong>Bridgerton Season Four, Part Two</strong>.
+                This author already has her wager placed. 🍷"
             </blockquote>
             <p class="whistledown-signature">— Lady Whistledown's Society Papers</p>
         </div>
