--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description"
-        content="Countdown to Bridgerton Season 4 Part 2 on Netflix — Ishmeen, Vishal, Rishika & Khushi are counting every second!">
+        content="Countdown to Bridgerton Season 4 Part 2 on Netflix — Ishmeen, Vishal, Rishika & Kohli are counting every second!">
     <title>Bridgerton Season 4 Part 2 — The Countdown</title>
 
     <!-- Google Fonts -->
@@ -124,7 +124,7 @@
                 </div>
             </div>
 
-            <!-- Khushi - Co-Host -->
+            <!-- Kohli - Co-Host -->
             <div class="friend-card host-card reveal-on-scroll" id="card-khushi">
                 <div class="card-glow"></div>
                 <div class="card-inner">
@@ -136,9 +136,9 @@
                         </div>
                         <div class="crown-badge">♛</div>
                     </div>
-                    <h3 class="friend-name">Khushi</h3>
-                    <p class="friend-title">Queen Khushi of Columbia</p>
-                    <p class="friend-quote">"A queen rules with wine in one hand and the remote in the other.
+                    <h3 class="friend-name">Kohli</h3>
+                    <p class="friend-title">Duchess Kohli of St. John</p>
+                    <p class="friend-quote">"A duchess rules with wine in one hand and the remote in the other.
                         The gossip shall flow as freely as the Pinot Noir."</p>
                     <div class="card-ornament">✦ ✦ ✦</div>
                 </div>
@@ -228,7 +228,7 @@
             <div class="quill-icon">✒</div>
             <blockquote class="whistledown-quote">
                 "Dear Reader, it has come to this author's attention that
-                <strong>Queen Khushi of Columbia</strong> and
+                <strong>Duchess Kohli of St. John</strong> and
                 <strong>Princess Ishmeen of Hamilton Heights</strong>
                 have conspired with <strong>His Grace, Vishal, the Duke of Morningside Heights</strong>
                 and <strong>Princess Rishika of Washington Heights</strong> for what promises to be
