fix: email sending guard + rename Khushi display name with Duchess Kohli title

--- a/public/index.html
+++ b/public/index.html
@@ -136,7 +136,7 @@
                         </div>
                         <div class="crown-badge">♛</div>
                     </div>
-                    <h3 class="friend-name">Kohli</h3>
+                    <h3 class="friend-name">Khushi</h3>
                     <p class="friend-title">Duchess Kohli of St. John</p>
                     <p class="friend-quote">"A duchess rules with wine in one hand and the remote in the other.
                         The gossip shall flow as freely as the Pinot Noir."</p>
