rename: Queen Khushi Kohli of St. Johns

--- a/public/index.html
+++ b/public/index.html
@@ -137,8 +137,8 @@
                         <div class="crown-badge">♛</div>
                     </div>
                     <h3 class="friend-name">Khushi</h3>
-                    <p class="friend-title">Duchess Kohli of St. John</p>
-                    <p class="friend-quote">"A duchess rules with wine in one hand and the remote in the other.
+                    <p class="friend-title">Queen Khushi Kohli of St. Johns</p>
+                    <p class="friend-quote">"A queen rules with wine in one hand and the remote in the other.
                         The gossip shall flow as freely as the Pinot Noir."</p>
                     <div class="card-ornament">✦ ✦ ✦</div>
                 </div>
@@ -228,7 +228,7 @@
             <div class="quill-icon">✒</div>
             <blockquote class="whistledown-quote">
                 "Dear Reader, it has come to this author's attention that
-                <strong>Duchess Kohli of St. John</strong> and
+                <strong>Queen Khushi Kohli of St. Johns</strong> and
                 <strong>Princess Ishmeen of Hamilton Heights</strong>
                 have conspired with <strong>His Grace, Vishal, the Duke of Morningside Heights</strong>
                 and <strong>Princess Rishika of Washington Heights</strong> for what promises to be
