feat: add Royal Court portrait gallery with character photos and intros
- Added gorgeous photo gallery section with all 4 character portraits
- Gold-bordered frames with hover animations
- Alternating image/text layout for visual variety
- Regal character introductions in Bridgerton style
- Fully responsive on mobile

--- a/public/index.html
+++ b/public/index.html
@@ -186,6 +186,105 @@
         </div>
     </section>
 
+    <!-- Royal Court Portraits Section -->
+    <section class="royal-court" id="royal-court">
+        <div class="section-header">
+            <p class="section-pre-title">Presenting</p>
+            <h2 class="section-title">The Royal Court</h2>
+            <div class="ornamental-divider small">
+                <span>⟡</span>
+                <span class="divider-line"></span>
+                <span>👑</span>
+                <span class="divider-line"></span>
+                <span>⟡</span>
+            </div>
+            <p class="section-description">
+                Behold the esteemed members of the court — each one more magnificent than the last.
+                Their portraits, commissioned by the finest painters in all the ton, shall hang in these halls for
+                eternity.
+            </p>
+        </div>
+
+        <div class="court-gallery">
+            <!-- Ishmeen -->
+            <div class="court-portrait reveal-on-scroll">
+                <div class="portrait-frame">
+                    <div class="portrait-glow"></div>
+                    <img src="images/ishmeen.jpg" alt="Princess Ishmeen of Hamilton Heights" class="portrait-img">
+                    <div class="portrait-ornament">✦</div>
+                </div>
+                <div class="portrait-info">
+                    <h3 class="portrait-name">Ishmeen</h3>
+                    <p class="portrait-title">Princess Ishmeen of Hamilton Heights</p>
+                    <p class="portrait-intro">
+                        The undisputed architect of every great evening in the ton. She plans with the precision
+                        of a general yet entertains with the grace of a duchess. One glance from Princess Ishmeen
+                        and even the most reluctant guest finds themselves raising a glass.
+                        She does not attend parties — she <em>curates</em> them.
+                    </p>
+                </div>
+            </div>
+
+            <!-- Khushi -->
+            <div class="court-portrait reveal-on-scroll">
+                <div class="portrait-frame">
+                    <div class="portrait-glow"></div>
+                    <img src="images/khushi.jpg" alt="Queen Khushi Kohli of St. Johns" class="portrait-img">
+                    <div class="portrait-ornament">✦</div>
+                </div>
+                <div class="portrait-info">
+                    <h3 class="portrait-name">Khushi</h3>
+                    <p class="portrait-title">Queen Khushi Kohli of St. Johns</p>
+                    <p class="portrait-intro">
+                        The reigning queen whose laughter can fill the grandest of ballrooms. Her taste in wine
+                        is rivaled only by her taste in scandal. When Queen Khushi raises her goblet,
+                        the entire court falls silent — for what follows is always either a toast
+                        or a revelation that will shake the season to its core.
+                    </p>
+                </div>
+            </div>
+
+            <!-- Vishal -->
+            <div class="court-portrait reveal-on-scroll">
+                <div class="portrait-frame">
+                    <div class="portrait-glow"></div>
+                    <img src="images/vishal.jpg" alt="His Grace, Vishal, Duke of Morningside Heights"
+                        class="portrait-img">
+                    <div class="portrait-ornament">✦</div>
+                </div>
+                <div class="portrait-info">
+                    <h3 class="portrait-name">Vishal</h3>
+                    <p class="portrait-title">His Grace, Vishal · Duke of Morningside Heights</p>
+                    <p class="portrait-intro">
+                        The Duke arrives not merely to watch but to <em>preside</em>. With impeccable taste
+                        in waistcoats and an opinion on every plotline no one asked for (yet secretly craves),
+                        His Grace commands every room he enters. He pours wine with the gravity of a man
+                        signing a treaty — and honestly, it may be just as consequential.
+                    </p>
+                </div>
+            </div>
+
+            <!-- Rishika -->
+            <div class="court-portrait reveal-on-scroll">
+                <div class="portrait-frame">
+                    <div class="portrait-glow"></div>
+                    <img src="images/rishika.jpg" alt="Princess Rishika of Washington Heights" class="portrait-img">
+                    <div class="portrait-ornament">✦</div>
+                </div>
+                <div class="portrait-info">
+                    <h3 class="portrait-name">Rishika</h3>
+                    <p class="portrait-title">Princess Rishika of Washington Heights</p>
+                    <p class="portrait-intro">
+                        The keeper of secrets and the spiller of tea — sometimes simultaneously.
+                        Princess Rishika arrives at every gathering armed with pearls, poise, and enough gossip
+                        to fill three issues of Lady Whistledown's column. Cross her at your peril;
+                        spoil a single scene and she shall have you exiled from the kingdom before the credits roll.
+                    </p>
+                </div>
+            </div>
+        </div>
+    </section>
+
     <!-- Season Info Section -->
     <section class="season-info" id="season-info">
         <div class="section-header">
