Add 10 new features: polling chat, Regency translator, polls, tea spill, quiz, predictions, episodes, Spotify player, dress code guide, updated nav

--- a/public/admin.html
+++ b/public/admin.html
@@ -317,7 +317,19 @@
         <span class="nav-separator">|</span>
         <a href="/admin.html" class="active">🔑 Royal Decrees</a>
         <span class="nav-separator">|</span>
-        <a href="/chamber.html">👑 Queen's Chamber</a>
+        <a href="/chamber.html">👑 Chamber</a>
+        <span class="nav-separator">|</span>
+        <a href="/translator.html">🪶 Translator</a>
+        <span class="nav-separator">|</span>
+        <a href="/polls.html">🗳️ Polls</a>
+        <span class="nav-separator">|</span>
+        <a href="/teaspill.html">🫖 Tea</a>
+        <span class="nav-separator">|</span>
+        <a href="/quiz.html">🎭 Quiz</a>
+        <span class="nav-separator">|</span>
+        <a href="/predictions.html">🏆 Predictions</a>
+        <span class="nav-separator">|</span>
+        <a href="/episodes.html">📅 Episodes</a>
     </nav>
 
     <main class="admin-page">
