--- a/public/index.html
+++ b/public/index.html
@@ -28,7 +28,19 @@
         <span class="nav-separator">|</span>
         <a href="/admin.html">🔑 Royal Decrees</a>
         <span class="nav-separator">|</span>
-        <a href="/chamber.html">👑 Queen's Chamber</a>
+        <a href="/chamber.html">👑 Chamber</a>
+        <span class="nav-separator">|</span>
+        <a href="/translator.html">🪶 Translator</a>
+        <span class="nav-separator">|</span>
+        <a href="/polls.html">🗳️ Polls</a>
+        <span class="nav-separator">|</span>
+        <a href="/teaspill.html">🫖 Tea</a>
+        <span class="nav-separator">|</span>
+        <a href="/quiz.html">🎭 Quiz</a>
+        <span class="nav-separator">|</span>
+        <a href="/predictions.html">🏆 Predictions</a>
+        <span class="nav-separator">|</span>
+        <a href="/episodes.html">📅 Episodes</a>
     </nav>
 
     <!-- Hero Section -->
@@ -338,6 +350,61 @@
                 This author already has her wager placed. 🍷"
             </blockquote>
             <p class="whistledown-signature">— Lady Whistledown's Society Papers</p>
+        </div>
+    </section>
+
+    <!-- Spotify Player Section -->
+    <section class="spotify-section" id="soundtrack">
+        <div class="section-header">
+            <p class="section-pre-title">Set the Mood</p>
+            <h2 class="section-title">The Soundtrack</h2>
+            <div class="ornamental-divider small">
+                <span>⟡</span><span class="divider-line"></span><span>🎵</span><span
+                    class="divider-line"></span><span>⟡</span>
+            </div>
+            <p class="section-description">Every great ball requires the perfect orchestra. Let the music of Bridgerton
+                transport you to Regency London.</p>
+        </div>
+        <div class="spotify-embed reveal-on-scroll" style="max-width: 600px; margin: 0 auto;">
+            <iframe style="border-radius: 16px; border: 1px solid rgba(201,168,76,0.2);"
+                src="https://open.spotify.com/embed/playlist/3sHmLYpONdFHUMOfAqKLhN?utm_source=generator&theme=0"
+                width="100%" height="400" frameBorder="0" allowfullscreen
+                allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"
+                loading="lazy"></iframe>
+        </div>
+    </section>
+
+    <!-- Dress Code Guide -->
+    <section class="dress-code" id="dress-code">
+        <div class="section-header">
+            <p class="section-pre-title">Prepare Thyself</p>
+            <h2 class="section-title">Dress Code Guide</h2>
+            <div class="ornamental-divider small">
+                <span>⟡</span><span class="divider-line"></span><span>👗</span><span
+                    class="divider-line"></span><span>⟡</span>
+            </div>
+            <p class="section-description">One does not simply attend a Bridgerton watch party in ordinary attire. Here
+                are the royal guidelines.</p>
+        </div>
+        <div class="info-content reveal-on-scroll">
+            <div class="info-card">
+                <div class="info-icon">👑</div>
+                <h3>Regency Elegance</h3>
+                <p>Think empire waistlines, flowing fabrics, and soft pastels. Channel your inner Daphne with a pearl
+                    necklace and elegant updo. Bonus points for opera gloves!</p>
+            </div>
+            <div class="info-card">
+                <div class="info-icon">🍷</div>
+                <h3>Cozy Luxe</h3>
+                <p>Not ready for full Regency? Go "Cozy Luxe" — silk pajamas, a velvet robe, and a wine glass that never
+                    empties. You'll look like a duke who just rolled out of bed. Perfectly acceptable.</p>
+            </div>
+            <div class="info-card">
+                <div class="info-icon">🎭</div>
+                <h3>The Wildcard</h3>
+                <p>Come as your favorite Bridgerton character! Penelope's yellow? Benedict's paint-stained artist look?
+                    The Queen's towering wig? The bolder, the better. The ton rewards audacity.</p>
+            </div>
         </div>
     </section>
 
