--- a/public/index.html
+++ b/public/index.html
@@ -353,7 +353,7 @@
         </div>
     </section>
 
-    <!-- Spotify Player Section -->
+    <!-- Soundtrack Section -->
     <section class="spotify-section" id="soundtrack">
         <div class="section-header">
             <p class="section-pre-title">Set the Mood</p>
@@ -365,12 +365,12 @@
             <p class="section-description">Every great ball requires the perfect orchestra. Let the music of Bridgerton
                 transport you to Regency London.</p>
         </div>
-        <div class="spotify-embed reveal-on-scroll" style="max-width: 600px; margin: 0 auto;">
-            <iframe style="border-radius: 16px; border: 1px solid rgba(201,168,76,0.2);"
-                src="https://open.spotify.com/embed/playlist/3sHmLYpONdFHUMOfAqKLhN?utm_source=generator&theme=0"
-                width="100%" height="400" frameBorder="0" allowfullscreen
-                allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"
-                loading="lazy"></iframe>
+        <div class="reveal-on-scroll" style="max-width: 700px; margin: 0 auto;">
+            <iframe style="border-radius: 16px; border: 1px solid rgba(201,168,76,0.2);" width="100%" height="400"
+                src="https://www.youtube.com/embed/videoseries?list=PLJqsJYaRlGRJZ0V_xSOBhebhmMm2GkEH5"
+                title="Bridgerton Soundtrack" frameborder="0"
+                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                allowfullscreen loading="lazy"></iframe>
         </div>
     </section>
 
